Enhanced environment variable support throughout the application

--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,48 @@
 # Domain configuration
-DOMAIN=example.com
+DOMAIN=mycloudmen.example.com
 ADMIN_EMAIL=admin@example.com
+ADMIN_DOMAIN=example.com
 
 # Traefik configuration
 TRAEFIK_DASHBOARD_USER=admin
 TRAEFIK_DASHBOARD_PASSWORD=secure_password_here
 
+# Application URLs
+APP_BASE_URL=https://mycloudmen.example.com
+API_BASE_URL=https://mycloudmen.example.com/api
+
+# MongoDB Configuration
+MONGO_USER=mongodb_user
+MONGO_PASSWORD=secure_mongo_password
+MONGO_CLUSTER=mongodb+srv://cluster.example.mongodb.net
+MONGO_DATABASE=mycloudmen_db
+
+# Auth0 Configuration
+AUTH0_DOMAIN=your-tenant.auth0.com
+AUTH0_CLIENT_ID=your_auth0_client_id
+AUTH0_AUDIENCE=https://your-api-identifier
+AUTH0_ISSUER_URI=https://your-tenant.auth0.com/
+AUTH0_CALLBACK_URL=https://mycloudmen.example.com/auth/callback
+
+# Teamleader Integration
+TEAMLEADER_CLIENT_ID=your_teamleader_client_id
+TEAMLEADER_CLIENT_SECRET=your_teamleader_client_secret
+TEAMLEADER_REDIRECT_URI=https://mycloudmen.example.com/api/oauth/teamleader/callback
+
+# External API URLs
+GOOGLE_WORKSPACE_API_URL=https://mycloudmen.example.com/google-workspace-api
+SIGNATURESATORI_API_URL=https://mycloudmen.example.com/signature-satori-api
+
+# Mail Server Configuration
+MAIL_HOST=smtp.example.com
+MAIL_PORT=587
+MAIL_USERNAME=noreply@example.com
+MAIL_PASSWORD=secure_mail_password
+
 # Docker Registry credentials
-DOCKER_REGISTRY_USER=your_username
-DOCKER_REGISTRY_TOKEN=your_personal_access_token
+DOCKER_REGISTRY_USER=your_github_username
+DOCKER_REGISTRY_TOKEN=your_github_personal_access_token
 
-# Application settings
-APP_ENV=production
-APP_DEBUG=false
-
-# Database configuration
-DB_HOST=db
-DB_PORT=3306
-DB_NAME=mycloudmen
-DB_USER=dbuser
-DB_PASSWORD=secure_db_password_here
-
-# Other services
-WIREMOCK_PORT=8080 
+# WireMock Services Configuration
+WIREMOCK_GOOGLE_PORT=8081
+WIREMOCK_SIGNATURE_PORT=8082 
