--- a/.env.example
+++ b/.env.example
@@ -1,48 +1,50 @@
-# Domain configuration
-DOMAIN=mycloudmen.example.com
-ADMIN_EMAIL=admin@example.com
-ADMIN_DOMAIN=example.com
+# MongoDB Configuration
+MONGO_USER=your_mongodb_username
+MONGO_PASSWORD=your_secure_password
+MONGO_CLUSTER=your-cluster.mongodb.net
+MONGO_DATABASE=your_database_name
 
-# Traefik configuration
-TRAEFIK_DASHBOARD_USER=admin
-TRAEFIK_DASHBOARD_PASSWORD=secure_password_here
+# Domain Configuration
+DOMAIN=mycloudmen.example.com
 
 # Application URLs
 APP_BASE_URL=https://mycloudmen.example.com
 API_BASE_URL=https://mycloudmen.example.com/api
-
-# MongoDB Configuration
-MONGO_USER=mongodb_user
-MONGO_PASSWORD=secure_mongo_password
-MONGO_CLUSTER=mongodb+srv://cluster.example.mongodb.net
-MONGO_DATABASE=mycloudmen_db
 
 # Auth0 Configuration
 AUTH0_DOMAIN=your-tenant.auth0.com
 AUTH0_CLIENT_ID=your_auth0_client_id
 AUTH0_AUDIENCE=https://your-api-identifier
 AUTH0_ISSUER_URI=https://your-tenant.auth0.com/
-AUTH0_CALLBACK_URL=https://mycloudmen.example.com/auth/callback
 
 # Teamleader Integration
 TEAMLEADER_CLIENT_ID=your_teamleader_client_id
 TEAMLEADER_CLIENT_SECRET=your_teamleader_client_secret
-TEAMLEADER_REDIRECT_URI=https://mycloudmen.example.com/api/oauth/teamleader/callback
+TEAMLEADER_REDIRECT_URI=https://mycloudmen.example.com/api/teamleader/oauth/callback
 
-# External API URLs
+# Admin Configuration
+ADMIN_DOMAIN=example.com
+ADMIN_EMAIL=admin@example.com
+
+# Traefik Configuration
+TRAEFIK_DASHBOARD_USER=admin
+TRAEFIK_DASHBOARD_PASSWORD=your_secure_hashed_password
+
+# Callback and API URLs
+AUTH0_CALLBACK_URL=https://mycloudmen.example.com/auth/callback
+EXTERNAL_API_URL=https://mycloudmen.example.com/api
+
+# Spring settings
+SPRING_PROFILES_ACTIVE=prod
+
+# Google Workspace Configuration
 GOOGLE_WORKSPACE_API_URL=https://mycloudmen.example.com/google-workspace-api
+
+# Signature Satori Configuration
 SIGNATURESATORI_API_URL=https://mycloudmen.example.com/signature-satori-api
 
-# Mail Server Configuration
+# Mail configuration
 MAIL_HOST=smtp.example.com
 MAIL_PORT=587
-MAIL_USERNAME=noreply@example.com
-MAIL_PASSWORD=secure_mail_password
-
-# Docker Registry credentials
-DOCKER_REGISTRY_USER=your_github_username
-DOCKER_REGISTRY_TOKEN=your_github_personal_access_token
-
-# WireMock Services Configuration
-WIREMOCK_GOOGLE_PORT=8081
-WIREMOCK_SIGNATURE_PORT=8082 
+MAIL_USERNAME=your_email@example.com
+MAIL_PASSWORD=your_secure_mail_password 
