--- a/.env.example
+++ b/.env.example
@@ -48,3 +48,8 @@ MAIL_HOST=smtp.example.com
 MAIL_PORT=587
 MAIL_USERNAME=your_email@example.com
 MAIL_PASSWORD=your_secure_mail_password 
+
+# Traefil Configuration
+TRAEFIK_EMAIL=plochaetm@gmail.com
+TRAEFIK_DASHBOARD_USER=admin
+TRAEFIK_DASHBOARD_PASSWORD=$$apr1$$H6uskkkW$$IgXLP6ewTrSuBkTrqE8wj/
